--- a/index.html
+++ b/index.html
@@ -1,33 +1,122 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wave Link</title>
-    <meta name="description" content="Connect smarter with Wavelink - Your personalized NFC-powered smart business card for the digital generation. Customizable, waterproof, and eco-friendly. Order now for only ৳599!">
-    <meta name="author" content="Wavelink Bangladesh" />
-    <meta name="keywords" content="smart card, NFC card, business card, digital card, Bangladesh, Wavelink, contactless card, smart business card">
-    <meta name="google-site-verification" content="mcCtt_Esb4k28cwy55It4Bnks3_jxJtH55QIq4s2qck" />    
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/jt4HEykceThci75UK4oKKqTRoFW2/social-images/social-1761125812886-Untitled design (8).png">
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/jt4HEykceThci75UK4oKKqTRoFW2/social-images/social-1761125812886-Untitled design (8).png">
-    <meta property="og:title" content="Wave Link">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wave Link</title>
+  <meta name="description"
+    content="Connect smarter with Wavelink - Your personalized NFC-powered smart business card for the digital generation. Customizable, waterproof, and eco-friendly. Order now for only ৳599!">
+  <meta name="author" content="Wavelink Bangladesh" />
+  <meta name="keywords"
+    content="smart card, NFC card, business card, digital card, Bangladesh, Wavelink, contactless card, smart business card">
+  <meta name="google-site-verification" content="mcCtt_Esb4k28cwy55It4Bnks3_jxJtH55QIq4s2qck" />
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.google-analytics.com https://va.vercel-scripts.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://storage.googleapis.com https://i.ytimg.com; connect-src 'self' https://*.supabase.co https://script.google.com https://script.googleusercontent.com https://vitals.vercel-insights.com https://*.vercel-analytics.com; frame-src 'self' https://www.youtube.com https://www.youtube-nocookie.com https://drive.google.com;">
+  <meta property="og:type" content="website" />
+  <meta property="og:image"
+    content="https://storage.googleapis.com/gpt-engineer-file-uploads/jt4HEykceThci75UK4oKKqTRoFW2/social-images/social-1761125812886-Untitled design (8).png">
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@lovable_dev" />
+  <meta name="twitter:image"
+    content="https://storage.googleapis.com/gpt-engineer-file-uploads/jt4HEykceThci75UK4oKKqTRoFW2/social-images/social-1761125812886-Untitled design (8).png">
+  <meta property="og:title" content="Wave Link">
   <meta name="twitter:title" content="Wave Link">
-  <meta property="og:description" content="Connect smarter with Wavelink - Your personalized NFC-powered smart business card for the digital generation. Customizable, waterproof, and eco-friendly. Order now for only ৳599!">
-  <meta name="twitter:description" content="Connect smarter with Wavelink - Your personalized NFC-powered smart business card for the digital generation. Customizable, waterproof, and eco-friendly. Order now for only ৳599!">
-  <link rel="icon" type="image/x-icon" href="https://storage.googleapis.com/gpt-engineer-file-uploads/jt4HEykceThci75UK4oKKqTRoFW2/uploads/1761125819991-Untitled design (24).png">
-  
+  <meta property="og:description"
+    content="Connect smarter with Wavelink - Your personalized NFC-powered smart business card for the digital generation. Customizable, waterproof, and eco-friendly. Order now for only ৳599!">
+  <meta name="twitter:description"
+    content="Connect smarter with Wavelink - Your personalized NFC-powered smart business card for the digital generation. Customizable, waterproof, and eco-friendly. Order now for only ৳599!">
+  <link rel="icon" type="image/x-icon"
+    href="https://storage.googleapis.com/gpt-engineer-file-uploads/jt4HEykceThci75UK4oKKqTRoFW2/uploads/1761125819991-Untitled design (24).png">
+
   <!-- Premium Typography - Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
+
+  <!-- AEO Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Wavelink Bangladesh",
+      "url": "https://wave-link-cards.vercel.app/",
+      "logo": "https://wave-link-cards.vercel.app/favicon.ico",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+8801410809023",
+        "contactType": "customer service",
+        "email": "waavelink@gmail.com"
+      },
+      "sameAs": [
+        "https://www.facebook.com/profile.php?id=61582857699324",
+        "https://www.instagram.com/__wave_link__/"
+      ]
+    }
+  </script>
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Product",
+      "name": "Wavelink Smart NFC Business Card",
+      "image": "https://storage.googleapis.com/gpt-engineer-file-uploads/jt4HEykceThci75UK4oKKqTRoFW2/social-images/social-1761125812886-Untitled design (8).png",
+      "description": "Premium NFC-powered smart business cards. Customizable, waterproof, and eco-friendly. Connect with a single tap.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Wavelink"
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://wave-link-cards.vercel.app/#order",
+        "priceCurrency": "BDT",
+        "price": "599",
+        "availability": "https://schema.org/InStock",
+        "itemCondition": "https://schema.org/NewCondition"
+      }
+    }
+  </script>
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "What is a smart card?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "A smart card is an NFC-enabled card that allows you to share your contact information, social media profiles, portfolio, and more with just a tap on any smartphone. No app required!"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Does it work on all phones?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes! Wavelink cards work with any NFC-enabled smartphone, which includes most modern Android and iPhone models (iPhone 7 and above). The recipient doesn't need to install any app."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How does an NFC card help the environment?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "One digital card replaces thousands of paper business cards, significantly reducing your carbon footprint and eliminating paper waste."
+          }
+        }
+      ]
+    }
+  </script>
 </head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
