--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <meta name="google-site-verification" content="mcCtt_Esb4k28cwy55It4Bnks3_jxJtH55QIq4s2qck" />
   <meta name="yandex-verification" content="1801bbd12ca78d12" />
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.google-analytics.com https://va.vercel-scripts.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://storage.googleapis.com https://i.ytimg.com; connect-src 'self' https://*.supabase.co https://script.google.com https://script.googleusercontent.com https://vitals.vercel-insights.com https://*.vercel-analytics.com; frame-src 'self' https://www.youtube.com https://www.youtube-nocookie.com https://drive.google.com;">
+    content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.google-analytics.com https://va.vercel-scripts.com https://challenges.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://storage.googleapis.com https://i.ytimg.com; connect-src 'self' https://*.supabase.co https://script.google.com https://script.googleusercontent.com https://vitals.vercel-insights.com https://*.vercel-analytics.com; frame-src 'self' https://www.youtube.com https://www.youtube-nocookie.com https://drive.google.com https://challenges.cloudflare.com;">
+  <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
   <meta property="og:type" content="website" />
   <meta property="og:image"
     content="https://storage.googleapis.com/gpt-engineer-file-uploads/jt4HEykceThci75UK4oKKqTRoFW2/social-images/social-1761125812886-Untitled design (8).png">
@@ -114,7 +115,7 @@
     }
   </script>
 </head>
-
+<body>Verification: 1801bbd12ca78d12</body>
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
