--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <meta name="keywords"
     content="smart card, NFC card, business card, digital card, Bangladesh, Wavelink, contactless card, smart business card">
   <meta name="google-site-verification" content="mcCtt_Esb4k28cwy55It4Bnks3_jxJtH55QIq4s2qck" />
-  <meta name="yandex-verification" content="1801bbd12ca78d12" />
   <meta http-equiv="Content-Security-Policy"
     content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.google-analytics.com https://va.vercel-scripts.com https://challenges.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://storage.googleapis.com https://i.ytimg.com; connect-src 'self' https://*.supabase.co https://script.google.com https://script.googleusercontent.com https://vitals.vercel-insights.com https://*.vercel-analytics.com; frame-src 'self' https://www.youtube.com https://www.youtube-nocookie.com https://drive.google.com https://challenges.cloudflare.com;">
   <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
@@ -115,6 +114,8 @@
     }
   </script>
 </head>
+
+<body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
